--- a/week4/static/style.css
+++ b/week4/static/style.css
@@ -1,6 +1,11 @@
-body {
+body {      
+            margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+        }
+
+        main {
+            text-align: center;
         }
 
         /* navbar */
@@ -8,53 +13,51 @@ body {
             background-color: rgb(1, 43, 57);
             display: flex;
             justify-content: center;
-            /* Horizontally center the content */
-            align-items: center;
-            /* Vertically center the content */
-            text-align: center;
-            margin-bottom: 40px;
-            height: 250px;
+            height: 100px;
         }
 
-        .navbarText h1 {
+        .navbar h1 {
+            color: rgb(252, 252, 252);
             font-size: 40px;
-            margin: 0;
+            text-align: center;
         }
-        .container {
-            max-width: 400px;
-            margin: 100px auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+        
         .form-group {
-            margin-bottom: 20px;
+            align-items: center;
+            justify-content: center;
+            margin: 5px;
+            padding: 10px;
         }
         .form-group label {
-            font-weight: bold;
             display: block;
             margin-bottom: 5px;
         }
         .form-group input {
-            width: 100%;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 3px;
         }
-        .form-group input[type="checkbox"] {
-            width: auto;
+                
+        .form-group input,
+        .form-group label {
+            display: inline;
+            align-items: center;
+            width: 250px;
         }
-        .form-group button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            border: none;
-            color: #fff;
-            cursor: pointer;
-            border-radius: 3px;
+        
+        .form-group input[type="checkbox"] {    
+            width: 10px;
         }
         .form-group button:hover {
-            background-color: #0056b3;
+            background-color: #9ea6af;
         }
+
+        
+        
         
