--- a/week4/templates/member.html
+++ b/week4/templates/member.html
@@ -4,7 +4,7 @@
 {% block h1 %}歡迎光臨，這是會員頁{% endblock %}
 
 {% block content %}
-<span>恭喜您，成功登入系統</span>
+<h1>恭喜您，成功登入系統</h1>
 <a href="/signout">登出系統</a>
 {% endblock %}
 
