--- a/week4/templates/signin.html
+++ b/week4/templates/signin.html
@@ -4,9 +4,9 @@
 {% block h1 %}歡迎光臨，請輸入帳號密碼{% endblock %}
 
 {% block content %}
-<!-- The onsubmit attribute specifies a JavaScript function to be executed when the form is submitted. In this case, it calls
-the validateForm() function. -->
-  <form action="{{ url_for('signin') }}" method="post" >  
+  <script src="../static/script.js"></script>
+  <h2>登入系統</h2>
+  <form action="{{ url_for('signin') }}" method="post" onsubmit="return validateForm()" novalidate>
     <!-- onsubmit="return validateForm()" -->
     <div class="form-group">
       <label for="username">帳號</label>
@@ -17,14 +17,30 @@ the validateForm() function. -->
       <input type="password" id="password" name="password" required>
     </div>
     <div class="form-group">
-      <input type="checkbox" id="agree" name="agree" required>
       <label for="agree">同意條款</label>
+      <input type="checkbox" id="agree" name="agree" required>
     </div>
     <div class="form-group">
       <button type="submit">登入</button>
     </div>
   </form>
-{% endblock %}
+
+  <hr>
+  <script src="../static/script.js"></script>
+  <form  action="{{ url_for('square') }}" method="post" onsubmit="return validInt()" novalidate>
+    <div class="form-group">
+      <label for="enter_int">正整數</label>
+      <input type="number" id="enter_int" name="enter_int">
+    </div>
+    <div class="form-group">
+      <button type="submit">計算</button>
+    </div>
+  </form>
+  <!-- {% block square_form %}
+    <script src="../static/script.js"></script>
+    {% include "square_form.html" %}
+  {% endblock %}
+{% endblock %} -->
 
 
 
