--- a/week6/templates/member.html
+++ b/week6/templates/member.html
@@ -6,5 +6,17 @@
 {% block content %}
 <h1>恭喜您，成功登入系統</h1>
 <a href="/signout">登出系統</a>
+
+<hr>
+
+{% if messages_list %}
+<ul>
+  {% for message in messages_list %}
+  <li>{{ message.0 }}: {{ message.1 }}</li>
+  {% endfor %}
+</ul>
+{% else %}
+<p>No messages available.</p>
+{% endif %}
 {% endblock %}
 
