--- a/week6/static/style.css
+++ b/week6/static/style.css
@@ -58,6 +58,17 @@ body {
             background-color: #9ea6af;
         }
 
-        
+        /* Style for message list */
+        #message_list {
+            font-size: 1.3em;
+            list-style-type: none;
+            padding: 0;
+        }
+
+        /* Style for each message item */
+        .message-item {
+            display: inline;
+            margin-bottom: 10px;
+        }
         
         
