--- a/week6/templates/member.html
+++ b/week6/templates/member.html
@@ -4,15 +4,39 @@
 {% block h1 %}歡迎光臨，這是會員頁{% endblock %}
 
 {% block content %}
-<h1>恭喜您，成功登入系統</h1>
+<h1>{{ name }}，歡迎登入系統</h1>
 <a href="/signout">登出系統</a>
 
 <hr>
 
+<h2>快來留言吧</h2>
+<form action="{{ url_for('createMessage') }}" method="post" novalidate>
+  <div class="form-group">
+    <label for="message">內容</label>
+    <input type="text" id="message" name="message" required>
+  </div>
+  <div class="form-group">
+    <button type="submit">送出</button>
+  </div>
+</form>
+
+<hr>
+
 {% if messages_list %}
-<ul>
+<ul id="message_list">
   {% for message in messages_list %}
-  <li>{{ message.0 }}: {{ message.1 }}</li>
+  <li class="message-item">
+    <div>
+      {{ message.1 }}: {{ message.2 }}
+      {% if message.1 == name %}
+      <form action="/deleteMessage" method="post" style="display: inline;">
+        <input type="hidden" name="message_id" value="{{ message.0 }}">
+        <input type="hidden" name="member_id" value="{{ message.3 }}">
+        <button type="submit" class="delete-button">X</button>
+      </form>
+      {% endif %}
+    </div>
+  </li>
   {% endfor %}
 </ul>
 {% else %}
