--- a/week6/templates/signin.html
+++ b/week6/templates/signin.html
@@ -6,7 +6,7 @@
 {% block content %}
   
   <h2>註冊帳號</h2>
-  <form action="{{ url_for('signup') }}" method="post" onsubmit="return submitForm()" novalidate>
+  <form action="{{ url_for('signup') }}" method="post" onsubmit="submitForm(event);" id="signupForm" novalidate>
     <div class="form-group">
       <label for="signup_name">姓名</label>
       <input type="text" id="signup_name" name="signup_name" required>
@@ -20,12 +20,12 @@
       <input type="password" id="signup_password" name="signup_password" required>
     </div>
     <div class="form-group">
-      <button type="submit">註冊</button>
+      <button type="submit" id="signupButton">註冊</button>
     </div>
   </form>
 
   <h2>登入系統</h2>
-  <form action="{{ url_for('signin') }}" method="post" onsubmit="return validateForm()" id="square-form" novalidate>
+  <form action="{{ url_for('signin') }}" method="post" onsubmit="return validateForm()" id="signin-form" novalidate>
     <div class="form-group">
       <label for="username">帳號</label>
       <input type="text" id="username" name="username" required>
