--- a/week6/templates/member.html
+++ b/week6/templates/member.html
@@ -29,10 +29,10 @@
     <div>
       {{ message.1 }}: {{ message.2 }}
       {% if message.1 == name %}
-      <form action="/deleteMessage" method="post" style="display: inline;">
+      <form action="/deleteMessage" method="post" class="messages-list">
         <input type="hidden" name="message_id" value="{{ message.0 }}">
         <input type="hidden" name="member_id" value="{{ message.3 }}">
-        <button type="submit" class="delete-button">X</button>
+        <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this message?')">X</button>
       </form>
       {% endif %}
     </div>
